--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -18,56 +18,68 @@
 /* For desktops and laptops, mostly. */
 @media only screen and (min-width: 1024px) {
   #mainmatter {
-    .slide {
-      width: 100%;
-      height: 100vh;
-      min-height: 400px;
+    margin-top: 10vh;
 
-      margin-bottom: 2px;
+    #collage {
+      height: 90vh;
 
-      overflow: hidden;
+      .slide {
+        width: 50%;
+        height: 50%;
+        min-height: 400px;
 
-      // Content definition for each slide
-      #img-ourbabies {
-        @include centralizedbg("../images/index/01ourbabies.png");
-      }
+        margin-bottom: 2px;
+        overflow: hidden;
 
-      #img-overcoming {
-        @include centralizedbg("../images/index/02overcoming.png");
-      }
+        float: left;
 
-      #img-deepsat {
-        @include centralizedbg("../images/index/03deepsat.png");
-      }
-
-      #img-celebrating {
-        @include centralizedbg("../images/index/04celebrating.png");
-      }
-      // END Content definition for each slide
-
-      .slide-img {
-        height: 100%;
-
-        transition: transform 10s;
-        &:hover {
-          transform: scale(1.1, 1.1);
+        // Content definition for each slide
+        #img-ourbabies {
+          @include centralizedbg("../images/index/01ourbabies.png");
         }
-      }
 
-      .slide-txt {
-        position: relative;
-        bottom: 90%;
-        left: 0;
+        #img-overcoming {
+          @include centralizedbg("../images/index/02overcoming.png");
+        }
 
-        padding: 1rem 0;
+        #img-deepsat {
+          @include centralizedbg("../images/index/03deepsat.png");
+        }
 
-        font-family: "Coming Soon", cursive;
-        font-size: 3.5em;
-        text-align: center;
-        color: white;
+        #img-celebrating {
+          @include centralizedbg("../images/index/04celebrating.png");
+        }
+        // END Content definition for each slide
 
-        background-color: #000;
-        background-color: rgba(0, 0, 0, 0.3);
+        .slide-img {
+          height: 100%;
+
+          transition: transform 10s;
+          &:hover {
+            transform: scale(1.1, 1.1);
+          }
+        }
+
+        .slide-txt {
+          position: relative;
+          bottom: 90%;
+          left: 0;
+
+          padding: 1rem 0;
+
+          font-family: "Coming Soon", cursive;
+          font-size: 2.2em;
+          text-align: center;
+          color: white;
+
+          background-color: #000;
+          background-color: rgba(0, 0, 0, 0.3);
+        }
+
+        // See `docs/margin-problem.dvi' relative to the repository's root.
+        &:nth-child(2), &:nth-child(4) {
+          padding-left: 2px;
+        }
       }
     }
   }
@@ -79,11 +91,9 @@
     .slide {
       width: 100%;
       height: 50vh;
-
       min-width: 500px;
 
       margin-bottom: 2px;
-
       overflow: hidden;
 
       // Content definition for each slide
