--- a/styles/scss/your-veggies.scss
+++ b/styles/scss/your-veggies.scss
@@ -32,44 +32,98 @@
   }
 }
 
-#mainmatter {
-  width: 70%;
-  margin: 100px auto 0 auto;
+@media only screen and (min-width: 1024px) {
+  #mainmatter {
+    margin-top: 10vh;
 
-  #pagetitle {
-    font: {
-      family: "Coming Soon", cursive;
-      size: 3em;
+    article {
+      width: 70%;
+      margin: auto;
+
+      #pagetitle {
+        font: {
+          family: "Coming Soon", cursive;
+          size: 3em;
+        }
+        text-align: center;
+        color: $dark-green;
+
+        margin-bottom: 4rem;
+      }
+
+      .thai {
+        margin-top: 2em;
+      }
+
+      section {
+        margin-bottom: 10vh;
+
+
+        .secthead {
+          @include img-placement(1);
+        }
+        .secthead2 {
+          @include img-placement(2);
+        }
+
+        .secthead3 {
+          @include img-placement(3);
+        }
+        
+        .sectcontent {
+          clear: both;
+
+          p {
+            margin: 0.5em 0;
+          }
+        }
+      }
     }
-    text-align: center;
-    color: $dark-green;
-
-    margin-bottom: 4rem;
   }
+}
 
-  .thai {
-    margin-top: 2em;
-  }
+@media only screen and (max-width: 1023px) {
+  #mainmatter {
+    margin-top: 10vh;
 
-  section {
-    margin-bottom: 10vh;
+    article {
+      width: 90%;
+      margin: auto;
 
-    .secthead {
-      @include img-placement(1);
-    }
-    .secthead2 {
-      @include img-placement(2);
-    }
+      #pagetitle {
+        font: {
+          family: "Coming Soon", cursive;
+          size: 3em;
+        }
+        text-align: center;
+        color: $dark-green;
 
-    .secthead3 {
-      @include img-placement(3);
-    }
-    
-    .sectcontent {
-      clear: both;
+        margin-bottom: 4rem;
+      }
 
-      p {
-        margin: 0.5em 0;
+      .thai {
+        margin-top: 2em;
+      }
+
+      section {
+        margin-bottom: 10vh;
+
+
+        .secthead, .secthead2, .secthead3 {
+          img {
+            width: 50%;
+            display: block;
+            margin: auto;
+          }
+        }
+        
+        .sectcontent {
+          clear: both;
+
+          p {
+            margin: 0.5em 0;
+          }
+        }
       }
     }
   }
@@ -79,5 +133,4 @@
   color: $light-green;
 }
 
-/* vim: sw=2 tw=80 wrap
-*/
+// vim: sw=2 tw=80 wrap
