--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -38,9 +38,10 @@
           display: inline-block;
           text-transform: uppercase;
           margin-left: 2em;
+          white-space: nowrap;
 
           a {
-            color: inherit;
+            color: #666;
             text-decoration: none;
           }
 
