--- a/styles/scss/modules/_colors.scss
+++ b/styles/scss/modules/_colors.scss
@@ -1,6 +1,7 @@
 // colors.scss  Color profiles
 //
-// To be imported into another SCSS file on compilation.
+// Import me:
+// @import "modules/colors"
 
 $dark-green: rgb(75, 115, 41);
 $light-green: rgb(146, 208, 80);
