Fix top margin of \#shopping

--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -54,7 +54,7 @@
     #shopping {
       width: 100%;
       height: 20vh;
-      margin: 10vh auto 0 auto;
+      margin: 100px auto 0 auto;
 
       #amisrtbl {
         margin: auto;
