--- a/styles/scss/classes/_article.scss
+++ b/styles/scss/classes/_article.scss
@@ -55,6 +55,10 @@
 
       section {
         padding-top: 100px;
+
+        ol, ul {
+          margin-left: 5em;
+        }
       }
 
       p {
@@ -126,6 +130,10 @@
 
       section {
         margin-top: 10vh;
+
+        ol, ul {
+          margin-left: 5em;
+        }
       }
 
       p {
