--- a/styles/your-veggies.css
+++ b/styles/your-veggies.css
@@ -30,6 +30,8 @@
         margin-top: 2em; }
       #mainmatter article section {
         padding-top: 100px; }
+        #mainmatter article section ol, #mainmatter article section ul {
+          margin-left: 5em; }
       #mainmatter article p {
         margin: 0.5em 0; }
       #mainmatter article h1 {
@@ -70,6 +72,8 @@
       margin-top: 2em; }
     #mainmatter article section {
       margin-top: 10vh; }
+      #mainmatter article section ol, #mainmatter article section ul {
+        margin-left: 5em; }
     #mainmatter article p {
       margin: 0.5em 0; }
     #mainmatter article h1 {
